--- a/index.html
+++ b/index.html
@@ -5,9 +5,43 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>G3-Architects-Website</title>
     <link rel="stylesheet" href="styles/architect.css">
-    
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Work+Sans&display=swap" rel="stylesheet">
+
 </head>
 <body>
-    
+    <header>
+<nav>
+    <h3>
+        G3 Architects
+    </h3>
+    <ul>
+        <li><a href="">Home</a></li>
+        <li><a href="">About</a></li>
+        <li><a href="">Contact Us</a></li>
+        <li><a href="">Login</a></li>
+    </ul>
+</nav>
+
+<div class="banner-container">
+    <h3>Brand New <br>
+        Group of Architects 
+        </h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde vel debitis, eum nisi accusantium molestiae?Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eaque, ad.</p>
+        <button class="btn-primary">Explore More</button>
+</div>
+<div class="banner-img">
+<img src="images/banner.png" alt="">
+</div>
+    </header>
+
+    <main>
+
+    </main>
+
+    <footer>
+
+    </footer>
 </body>
 </html>
